# navix-ai

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  benchmark.py  explain.py  jobs.py  maps.py  optimize.py  routes.py
app/core/: __init__.py  config.py  database.py  middleware.py
app/engine/: __init__.py  constraints.py  genetic.py  hacopso.py  objectives.py  pareto.py
app/explain/: __init__.py  explainer.py
app/memory/: __init__.py  route_bank.py
app/models/: __init__.py  base.py  job.py  ocean.py  port.py  route.py  ship.py
app/ocean/: __init__.py  grid.py  layers.py
app/schemas/: __init__.py  common.py  explain.py  job.py  optimization.py  route.py
app/services/: __init__.py  crud.py  optimization.py
app/ship/: __init__.py  emissions.py  profile.py
data/: seed.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  MapView.tsx  OceanScene.tsx
frontend/src/pages/: Dashboard.tsx  Explain.tsx  Landing.tsx  LiveOptimization.tsx  Optimizer.tsx  ParetoExplorer.tsx
frontend/src/services/: api.ts
tests/: test_api.py  test_hacopso.py
